--- a/code/Parameters.yml
+++ b/code/Parameters.yml
@@ -1,4 +1,11 @@
-version1:
-  output_size: 10
-  manhattan_rule_flag : False
+batch_size : 100
+test_batch_size : 100
+epochs : 5
+lr : 0.1
+momentum : 0.1
+noCuda : False
+seed : 0
+log_interval : 10
+save_model : True
+
   
