--- a/Parameters.yml
+++ b/Parameters.yml
@@ -7,5 +7,8 @@ noCuda : False
 seed : 0
 log_interval : 10
 save_model : True
+dg_bins : [0,50,200,256]
+dg_values : [0,127,255]
+dg_visualize : 1
 
   
